--- a/bootstrap/forget_password/forget_password_screen.html
+++ b/bootstrap/forget_password/forget_password_screen.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <title>Password Recovery</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -8,32 +9,10 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  </head>
-  <body>
-    <style>
-        .recovery-wrap{
-            background: white;
-            border: 1px solid #eee;
-            border-radius: 5%;
-            width: 320px;
-            margin: 0 auto;
-            margin-top: 100px;
-            padding: 15px;
-        }
+    <link rel='stylesheet' type='text/css' href='../../resources/css/forget_password/forget_password_screen.css'>
+</head>
 
-        .top {
-            padding-bottom: 20px;
-        }
-
-        .form-group.last {
-            margin-bottom: 7px;    
-        }
-
-        label{
-            font-weight: 600;
-        }
-    </style>
-
+<body>
     <div class="container-fluid">
         <div class='col'>
             <div class='recovery-wrap'>
@@ -41,7 +20,8 @@
                     <h3 class='text-danger text-center'>Password Recovery</h3>
                 </div>
                 <form class='form-horizontal'>
-                    <div class='form-group'>        <!-- email -->
+                    <div class='form-group'>
+                        <!-- email -->
                         <div class='col'>
                             <label for='email-field'>Please enter your user account's verified email address
                                  and we will send you a password reset link.</p>
